Fix Grid 3 It looks like the Items wrapper container was for some reason too short for all the boxes so I am making an attempt at bumping the height in the hope of including all the boxes

--- a/Crystalspire-project/Crystalspire.css
+++ b/Crystalspire-project/Crystalspire.css
@@ -88,6 +88,7 @@ body {
   display: grid;
   grid-auto-flow: row;
   grid-template-columns: 1fr 1fr 1fr;
+  height: 100%;
 }
 .Portfolio-item-wrapper {
   position: relative;
